Update for JDK 17 and Spring Boot 3.0.6 (#1)
* Update for JDK 17 and Spring Boot 3.0.6

* Update README for Java 17

* Update artifact name and version

* Update test instructions

* Remove enable-preview

Not needed anymore